Footer alignment (Fixes #4)

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -34,6 +34,10 @@ body{
     min-width: 350px;
 }
 
+.wt-footers{
+    text-align: center;
+}
+
 @media (min-width: 1200px) {
     .container {
         max-width: 75vw;
